--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "ttps://www.siyeso.com/",
+  "homepage": "https://www.siyeso.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
